#[[
 Copyright (C) 2020 hurricane <l@stdb.io>. All rights reserved.
 +------------------------------------------------------------------------------+
 |                                                                              |
 |                                                                              |
 |                    ..######..########.########..########.                    |
 |                    .##....##....##....##.....##.##.....##                    |
 |                    .##..........##....##.....##.##.....##                    |
 |                    ..######.....##....##.....##.########.                    |
 |                    .......##....##....##.....##.##.....##                    |
 |                    .##....##....##....##.....##.##.....##                    |
 |                    ..######.....##....########..########.                    |
 |                                                                              |
 |                                                                              |
 |                                                                              |
 +------------------------------------------------------------------------------+
]]

project(cpp-optparse)

add_library(cpp-optparse OptionParser.cpp)

add_executable(testprog EXCLUDE_FROM_ALL OptionParser.cpp testprog.cpp)
